--- a/package.json
+++ b/package.json
@@ -9,10 +9,55 @@
         "prod": "npm run production",
         "production": "mix --production"
     },
-    "devDependencies": {
-        "axios": "^0.21",
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "5.15.3",
+        "@popperjs/core": "2.9.1",
+        "@tailwindcss/forms": "0.2.1",
+        "@vue/compiler-sfc": "3.0.7",
+        "axios": "^0.25.0",
+        "chart.js": "2.9.4",
+        "core-js": "3.9.1",
+        "gulp": "4.0.2",
+        "gulp-append-prepend": "1.0.8",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "tailwindcss": "2.0.4",
+        "vue": "3.0.7",
+        "vue-axios": "^3.4.0",
+        "vue-router": "4.0.5"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "rules": [],
+        "parserOptions": {
+            "parser": "@babel/eslint-parser"
+        }
+    },
+    "postcss": {
+        "plugins": {
+            "autoprefixer": []
+        }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions"
+    ],
+    "devDependencies": {
+        "@popperjs/core": "^2.10.2",
+        "bootstrap": "^5.1.3",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "vue": "^2.6.12",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.12"
     }
 }
